language/move-lang/tests/move_check/typing/return_type_explicit_exp_invalid.exp
error: 

   ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:4:15 ───
   │
 4 │     fun t0(): u64 {
   │               --- Is not compatible with: 'u64'
 5 │         return ()
   │         ^^^^^^^^^ Invalid return
   │                -- The type: '()'
   │

error: 

   ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:8:15 ───
   │
 8 │     fun t1(): () {
   │               -- Is not compatible with: '()'
 9 │         if (true) return 1 else return 0
   │                   ^^^^^^^^ Invalid return
   │                          - The type: integer
   │

error: 

   ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:8:15 ───
   │
 8 │     fun t1(): () {
   │               -- Is not compatible with: '()'
 9 │         if (true) return 1 else return 0
   │                                 ^^^^^^^^ Invalid return
   │                                        - The type: integer
   │

error: 

    ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:12:15 ───
    │
 12 │     fun t2(): (u64, bool) {
    │               ----------- Is not compatible with the expression list type of length 2: '(u64, bool)'
 13 │         loop return (0, false, R{});
    │              ^^^^^^^^^^^^^^^^^^^^^^ Invalid return
    │                     --------------- The expression list type of length 3: '({integer}, bool, 0x8675309::M::R)'
    │

error: 

    ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:17:15 ───
    │
 17 │     fun t3(): (u64, bool, R, bool) {
    │               -------------------- Is not compatible with the expression list type of length 4: '(u64, bool, 0x8675309::M::R, bool)'
 18 │         while (true) return (0, false, R{});
    │                      ^^^^^^^^^^^^^^^^^^^^^^ Invalid return
    │                             --------------- The expression list type of length 3: '({integer}, bool, 0x8675309::M::R)'
    │

error: 

    ┌── tests/move_check/typing/return_type_explicit_exp_invalid.move:22:16 ───
    │
 22 │     fun t4(): (bool, u64, R) {
    │                ---- Is not compatible with: 'bool'
 23 │         while (false) return (0, false, R{});
    │                       ^^^^^^^^^^^^^^^^^^^^^^ Invalid return
    │                               - The type: integer
    │

